--- a/src/scss/partials/_generic.scss
+++ b/src/scss/partials/_generic.scss
@@ -73,9 +73,9 @@
       }
     }
 
-    .with-controls {
+    &.with-controls {
       .file-list-info {
-        right: 4rem;
+        right: 80px;
       }
     }
   }
